small change to .subtitle picture to avoid overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ a, a:link, a:active {
       "about-me"
       "work"
       "contact-me";
-    grid-template-rows: 100px 150px 400px 1000px 200px;
+    grid-template-rows: 100px 150px 250px 1000px 200px;
   }
 
   .about-me-title, .work-title, .contact-me-title {
